css/style.css
html, html a {
  font-family: "DIN", sans-serif;
  -webkit-font-smoothing: antialiased;
  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
}

h1#header {
  padding: 10px 0 20px 0;
  font-size: 6em;
}

h1#header a {
  color: white;
  opacity: 0.6;
  text-decoration: none;
}

#main-content {
  position: relative;
  background-color: pink;
  z-index: 99;
}

#text-box {
  position: fixed;
  top: 60%;
  left: 38% !important;
}

#mobile-backdrop {
  z-index: 1;
  height: 100vh;
  width: 100vh;
  display: none;
  background-color: #333333;
}

#mobile-backdrop h1 {
  color: white;
}

@media screen and (max-width: 1350px) {
  #text-box {
    left: 35% !important;
  }
}

@media screen and (max-width: 598px) {
  #video-wrapper {
    display: none;
  }

  #mobile-backdrop {
    display: block;
  }

  #text-box {
    left: 20% !important;
  }
}

@media screen and (max-height: 500px) {
  #text-box {
    top: 40% !important;
  }
}

#video-wrapper {
  height:100vh;
  width:100vw;
  text-align: center;
}

#enter-button {
  border-radius: 2px;
  padding: 15px;
  background-color: black;
  -webkit-animation: fadein 15.5s; /* Safari and Chrome */
  -moz-animation: fadein 15.5s; /* Firefox */
  -ms-animation: fadein 15.5s; /* Internet Explorer */
  -o-animation: fadein 15.5s; /* Opera */
  animation: fadein 15.5s;
}

@keyframes fadein {
  from { opacity: 0; }
  to   { opacity: 0.6; }
}

/* Firefox */
@-moz-keyframes fadein {
  from { opacity: 0; }
  to   { opacity: 0.6; }
}

/* Safari and Chrome */
@-webkit-keyframes fadein {
  from { opacity: 0; }
  to   { opacity: 0.6; }
}

/* Internet Explorer */
@-ms-keyframes fadein {
  from { opacity: 0; }
  to   { opacity: 0.6; }
}

/* Opera */
@-o-keyframes fadein {
  from { opacity: 0; }
  to   { opacity: 0.6; }
}

/*#enter-button {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 6em;
  text-align: center;
  bottom: 50px;
  padding: 10px 25px 10px 25px;
  border: none;
  border-radius: 2px;
  font-size: 22px;
}*/

#container {
  position: relative;
}

.background-video {
  background-position: top center;
  background-repeat: no-repeat;
  bottom: 0;
  left: 0;
  overflow: hidden;
  position: fixed;
  right: 0;
  top: 0;
}

video,
source {
  bottom: 0;
  left: 0;
  min-height: 100%;
  min-width: 100%;
  position: absolute;
}

.loaded .ytplayer-container {
  display: block;
}

.loaded .placeholder-image {
  opacity: 0;
}

/*.ytplayer-container {
  bottom: 0;
  height: 100%;
  left: 0;
  min-width: 100%;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 0;
}

.placeholder-image {
  height: 100%;
  left: 0;
  min-height: 100%;
  min-width: 100%;
  position: fixed;
  top: 0;
  z-index: 1;

  opacity: 1;
  transition: opacity .25s ease-in-out;
  -moz-transition: opacity .25s ease-in-out;
  -webkit-transition: opacity .25s ease-in-out;
}

.ytplayer-shield {
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 2;
}

.ytplayer-player {
  position: absolute;
}

.container {
  border-radius: 6px;
  background: rgba(255, 255, 255, .9);
  padding: 0 30px 0 30px;
  margin: 30px auto;
}*/

